test_outputs/connlist/acs-security-demos_focus_workload_backend_checkout_frontend_webapp_egress_exposure_output.txt
backend/checkout[Deployment] => backend/notification[Deployment] : TCP 8080
backend/checkout[Deployment] => backend/recommendation[Deployment] : TCP 8080
backend/checkout[Deployment] => payments/gateway[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/checkout[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/recommendation[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/reports[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/shipping[Deployment] : TCP 8080

Exposure Analysis Result:
Egress Exposure:
backend/checkout[Deployment] 	=> 	entire-cluster : UDP 5353
frontend/webapp[Deployment]  	=> 	entire-cluster : UDP 5353
